# WEB_HW_8

./: db_connect.py  pyproject.toml
contacts/: consumer_email.py  consumer_sms.py  contact.py  load_data.py  producer.py
quotes/: load_data.py  main.py  models.py
